<resources>
    <string name="app_name">CodelearnTwitterApp</string>

    <string name="hello_twitter">Hello Twitter</string>
    <string name="action_settings">Settings</string>
    <string name="lbl_username">Username</string>
    <string name="lbl_enter_username">Enter your UserName</string>
    <string name="lbl_pwd">Password</string>
    <string name="lbl_enter_pwd">Enter your password</string>
    <string name="lbl_login">Login</string>
    <string name="title_activity_tweet_list">TweetListActivity</string>
    <string name="no_tweet_found">No Tweet Found</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_tweet_detail">TweetDetailActivity</string>
</resources>
