<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:id="@+id/header"
        android:text="@string/hello_twitter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:background="@android:color/black"/>

    <LinearLayout android:id="@+id/uname_block"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/header"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp">

        <TextView android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_username"
            android:layout_gravity="center_vertical"
            android:textSize="16sp"
            android:textColor="@android:color/black"/>

        <EditText android:id="@+id/fld_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_enter_username"
            android:layout_gravity="center_vertical"
            android:textSize="13sp"
            android:layout_marginLeft="8dp"
            android:paddingLeft="5dp"
            android:inputType="textEmailAddress"/>

    </LinearLayout>

    <LinearLayout android:id="@+id/pwd_block"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/uname_block"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp">

        <TextView android:id="@+id/pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_pwd"
            android:layout_gravity="center_vertical"
            android:textSize="16sp"
            android:textColor="@android:color/black"/>

        <EditText android:id="@+id/fld_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_enter_pwd"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="8dp"
            android:paddingLeft="5dp"
            android:textSize="13sp"
            android:inputType="textPassword"/>
    </LinearLayout>

    <Button android:id="@+id/btn_login"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/pwd_block"
        android:text="@string/lbl_login"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:textSize="13sp"
        android:textStyle="bold"/>
</RelativeLayout>
